// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message empty 1`] = `
<div
  className="emotion-3"
>
  <p
    className="emotion-1"
  />
  <button
    className="emotion-2"
    onClick={[Function]}
  />
</div>
`;

exports[`Message text 1`] = `
<div
  className="emotion-3"
>
  <p
    className="emotion-1"
  >
    This is an admin message.
  </p>
  <button
    className="emotion-2"
    onClick={[Function]}
  />
</div>
`;
